# pdfannots

./: .flake8  .gitignore  EXEMPLO_UTILIZACAO.txt  LICENSE.txt  README.md  export.md  main.py  mypy.ini  pdfannots.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  summarisepdfannots.py  summxfdf.py  tests.py
.github/workflows/: codeql-analysis.yml  python-checks.yml  python-package.yml  python-publish.yml
pdfannots/: __init__.py  cli.py  types.py  utils.py
pdfannots/printer/: __init__.py  csv.py  edn.py  json.py  jsonl.py  markdown.py  todocsv.py  typst.py
tests/: tests.py
